Remove redundant comments

--- a/CS312-Lab03/Makefile
+++ b/CS312-Lab03/Makefile
@@ -1,11 +1,8 @@
-all: assignment3-cube.out assignment3-rectangle.out
-
-assignment3-cube.out: assignment3-cube.cpp ../glad.o
-	clang++ -lglfw -framework OpenGL -o assignment3-cube.out assignment3-cube.cpp ../glad.o
+all: assignment3-rectangle.out
 
 assignment3-rectangle.out: assignment3-rectangle.cpp ../glad.o
 	clang++ -lglfw -framework OpenGL -o assignment3-rectangle.out assignment3-rectangle.cpp ../glad.o
 
 .PHONY: clean
 clean:
-	rm assignment3-cube.out assignment3-rectangle.out
+	rm assignment3-rectangle.out
