Add triangle code for assignment 3

--- a/CS312-Lab03/Makefile
+++ b/CS312-Lab03/Makefile
@@ -1,8 +1,11 @@
-all: assignment3-rectangle.out
+all: assignment3-rectangle.out assignment3-triangle.out
 
 assignment3-rectangle.out: assignment3-rectangle.cpp ../glad.o
-	clang++ -lglfw -framework OpenGL -o assignment3-rectangle.out assignment3-rectangle.cpp ../glad.o
+	g++ -lglfw -framework OpenGL -o assignment3-rectangle.out assignment3-rectangle.cpp ../glad.o
+
+assignment3-triangle.out: assignment3-triangle.cpp ../glad.o
+	g++ -lglfw -framework OpenGL -o assignment3-triangle.out assignment3-triangle.cpp ../glad.o
 
 .PHONY: clean
 clean:
-	rm assignment3-rectangle.out
+	rm assignment3-rectangle.out assignment3-triangle.out
