Use OpenGL type aliases

--- a/CS312-Lab03/Makefile
+++ b/CS312-Lab03/Makefile
@@ -1,4 +1,4 @@
-all: assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out
+all: assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
 
 assignment3-rectangle.out: assignment3-rectangle.cpp ../glad.o
 	g++ -lglfw -framework OpenGL -o assignment3-rectangle.out assignment3-rectangle.cpp ../glad.o
@@ -9,6 +9,9 @@ assignment3-triangle.out: assignment3-triangle.cpp ../glad.o
 assignment3-triangle2.out: assignment3-triangle2.cpp ../glad.o
 	g++ -lglfw -framework OpenGL -o assignment3-triangle2.out assignment3-triangle2.cpp ../glad.o
 
+assignment3-triangle3.out: assignment3-triangle3.cpp ../glad.o
+	g++ -lglfw -framework OpenGL -o assignment3-triangle3.out assignment3-triangle3.cpp ../glad.o
+
 .PHONY: clean
 clean:
-	rm assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out
+	rm assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
