Add cube code for assignment 3

--- a/CS312-Lab03/Makefile
+++ b/CS312-Lab03/Makefile
@@ -1,4 +1,7 @@
-all: assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
+all: assignment3-cube.out assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
+
+assignment3-cube.out: assignment3-cube.cpp ../glad.o
+	g++ -lglfw -framework OpenGL -o assignment3-cube.out assignment3-cube.cpp ../glad.o
 
 assignment3-rectangle.out: assignment3-rectangle.cpp ../glad.o
 	g++ -lglfw -framework OpenGL -o assignment3-rectangle.out assignment3-rectangle.cpp ../glad.o
@@ -14,4 +17,4 @@ assignment3-triangle3.out: assignment3-triangle3.cpp ../glad.o
 
 .PHONY: clean
 clean:
-	rm assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
+	rm assignment3-cube.out assignment3-rectangle.out assignment3-triangle.out assignment3-triangle2.out assignment3-triangle3.out
